[package]
name = "csv-cli"
version = "0.1.0"
edition = "2021"
authors = ["Oscar"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
csv="1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
duckdb = "0.10.1"
